Fix logout button alignment. Translate "My Data" subnav and search page headers.

--- a/joysoundtv-i18n-ps3-en.user.css
+++ b/joysoundtv-i18n-ps3-en.user.css
@@ -52,6 +52,8 @@ a[href="/kyokunavi/ps3/session/logout"] {
 a[href="/kyokunavi/ps3/session/logout"] > span {
     display: inline-block;
     background: linear-gradient(to bottom, #FFFFFF, #F4F4F4);
+    margin-left: 40px;
+    width: 110px;
 }
 
 /* Big 5 icons (How to, Search, Categories, My Data, Queue) */
